cmake_minimum_required(VERSION 2.8.3)
project(denso_arm)

## Find catkin macros and libraries
## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
## is used, also find other catkin packages
find_package(catkin REQUIRED)

catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES rrbot_description
#  CATKIN_DEPENDS other_catkin_pkg
#  DEPENDS system_lib
)







